; ModuleID = '/home/carl/AnghaBench/radare2/libr/parse/p/extr_parse_wasm_pseudo.c_varsub.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/parse/p/extr_parse_wasm_pseudo.c_varsub.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"call \00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"call sym.%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32*, i32, i32, i8*, i8*, i32)* @varsub to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @varsub(%struct.TYPE_5__* %0, i32* %1, i32 %2, i32 %3, i8* %4, i8* %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i8* %4, i8** %13, align 8
  store i8* %5, i8** %14, align 8
  store i32 %6, i32* %15, align 4
  store i8* null, i8** %16, align 8
  %18 = load i8*, i8** %14, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 0
  store i8 0, i8* %19, align 1
  %20 = load i8*, i8** %13, align 8
  %21 = call i32 @strncmp(i8* %20, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 5)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %42, label %23

23:                                               ; preds = %7
  %24 = load i8*, i8** %13, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 5
  %26 = call i32 @r_num_get(i32* null, i8* %25)
  store i32 %26, i32* %17, align 4
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %17, align 4
  %32 = call i8* @get_fcn_name(i32 %30, i32 %31)
  store i8* %32, i8** %16, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %35, label %34

34:                                               ; preds = %23
  store i32 0, i32* %8, align 4
  br label %43

35:                                               ; preds = %23
  %36 = load i8*, i8** %14, align 8
  %37 = load i32, i32* %15, align 4
  %38 = load i8*, i8** %16, align 8
  %39 = call i32 @snprintf(i8* %36, i32 %37, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i8* %38)
  %40 = load i8*, i8** %16, align 8
  %41 = call i32 @free(i8* %40)
  store i32 1, i32* %8, align 4
  br label %43

42:                                               ; preds = %7
  store i32 0, i32* %8, align 4
  br label %43

43:                                               ; preds = %42, %35, %34
  %44 = load i32, i32* %8, align 4
  ret i32 %44
}

declare dso_local i32 @strncmp(i8*, i8*, i32) #1

declare dso_local i32 @r_num_get(i32*, i8*) #1

declare dso_local i8* @get_fcn_name(i32, i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
